2.40 Logs Padronizar e Validacao de dados no backend